Fix alignment of .recommended-users

--- a/app/assets/stylesheets/components/_user.scss
+++ b/app/assets/stylesheets/components/_user.scss
@@ -56,6 +56,7 @@
     color: $iron;
     padding-left: 54px;
     max-width: 90%;
+    min-height: 20px;
 
     @media (min-width: $screen-md-min) {
       max-width: 16em;
